# splai

./: .gitignore  .splai.yml  LICENSE.txt  README.md  compose.yml  knowledge.txt  pyproject.toml  requirements.txt  splai.sh
.devcontainer/: Dockerfile  devcontainer.json
splai/: utils.py
splai/cli/: errors.py  main.py
splai/cli/commands/: __init__.py  ask.py  init.py  knowledge.py  refactor.py  request.py
